Fix padding, margins and flex properties in header
Top header and headerbody weren't aligned
perfectly due to paddings difference. Made
sure each flex item grows at same rate now with
flex: 1; for smooth and precise layout.

--- a/styles.css
+++ b/styles.css
@@ -14,17 +14,27 @@
     margin-left: 100px;
     margin-right: 100px;
     padding: 10px;
+    align-items: center;
 }
 
 ul {
     display: flex;
     list-style: none;
-    gap: 10px;
+    gap: 28px;
+    flex: 1 1 0;
+    justify-content: center;
+    text-align: center;
+
 }
+
 
 .header-logo {
     color: #f9faf8;
     font-size: 24px;
+    flex: 1 1 0;
+    font-weight: 800;
+    
+
 }
 
 a {
@@ -34,31 +44,49 @@ a {
 
 .title {
     font-size: 48px;
-    font-weight: 900;
+    font-weight: 800;
     color: #f9faf8;
+
+
 }
 
 .titlesub {
     font-size: 18px;
     color: #e5e7eb;
+    filter: contrast(75%);
+    margin-bottom: 15px;
 
 }
 
-
 .headerbody {
     display: flex;
-    padding: 100px;
+    padding: 100px 10px 100px 10px;
+    margin: 0px 100px;
     justify-content: space-around;
+    
+}
+
+.hbleft {
+    flex: 1;
+}
+
+.hbright {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+
 }
 
 img {
     max-height: 200px;
-    margin-left: 45px;
 }
+
 button {
     background-color: #3882F6;
     color: white;
-    padding: 5px 20px;
+    padding: 5px 25px;
     border-radius: 8px;
     border: none;
+    font-weight: 800;
 }
